All_Component_DX/force-app/main/default/objects/SM_Change_Order__c/fields/SM_Decision_Date__c.field-meta.xml
<CustomField>
    <fullName>SM_Decision_Date__c</fullName>
    <description>This optional field may be used to indicate a necessary decision-making date for the Change Order record.</description>
    <inlineHelpText>This optional field may be used to indicate a necessary decision-making date for the Change Order record.</inlineHelpText>
    <label>Decision Date</label>
    <type>Date</type>
</CustomField>