All_Component_DX/force-app/main/default/objects/SM_Change_Order__c/fields/SM_Delivery_Method__c.field-meta.xml
<CustomField>
    <fullName>SM_Delivery_Method__c</fullName>
    <description>This picklist indicates what output (work order, quote, etc) will result from confirmed Change Order search Results. As of 20.2, work order is the only delivery method available.</description>
    <inlineHelpText>This picklist indicates what output (work order, quote, etc) will result from confirmed Change Order search Results. As of 20.2, work order is the only delivery method available.</inlineHelpText>
    <label>Delivery Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Work Order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>