All_Component_DX/force-app/main/default/objects/SM_Change_Order__c/fields/SM_Notify_CORD_Owner__c.field-meta.xml
<CustomField>
    <fullName>SM_Notify_CORD_Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to indicate whether to send an email to Change Order owner after completion of the Work Order generation process.</description>
    <inlineHelpText>This field is used to indicate whether to send an email to Change Order owner after completion of the Work Order generation process.</inlineHelpText>
    <label>Notify FCO Owner</label>
    <type>Checkbox</type>
</CustomField>