All_Component_DX/force-app/main/default/objects/SM_Change_Order__c/fields/SM_Priority__c.field-meta.xml
<CustomField>
    <fullName>SM_Priority__c</fullName>
    <description>This field is used to indicate the priority of Change Order.</description>
    <inlineHelpText>This field is used to indicate the priority of Change Order.</inlineHelpText>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>