All_Component_DX/force-app/main/default/objects/SM_Change_Order__c/fields/SM_Status__c.field-meta.xml
<CustomField>
    <fullName>SM_Status__c</fullName>
    <description>This field is used to indicate the status of the Change Order.</description>
    <inlineHelpText>This field is used to indicate the status of the Change Order.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>