All_Component_DX/force-app/main/default/objects/SM_Change_Order__c/fields/SM_Title__c.field-meta.xml
<CustomField>
    <fullName>SM_Title__c</fullName>
    <description>This field is used to store the name of the Change Order.</description>
    <inlineHelpText>This field is used to store the name of the Change Order.</inlineHelpText>
    <label>Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>